<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloTaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        android:gravity="center"
        android:letterSpacing="0.07"
        android:lineSpacingExtra="26sp"
        android:text="@string/tituloIniciarSesion"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieCedula"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/tituloTaller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cedula" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginCedula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:inputType="number"
        android:hint="@string/escribirCedula"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/lottieCedula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:columnCount="2"
        app:rowCount="4"
        app:layout_constraintTop_toBottomOf="@id/loginCedula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/boton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verNombre"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verAmigos"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editarPersona"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/añadirAmigo"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminarPersona"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminarAmigo"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/boton7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crearPersona"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
